apps/base/flurfunk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flurfunk
  namespace: flurfunk
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flurfunk
  ports:
    - name: http
      port: 80
      targetPort: http
